<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/Password"
        android:paddingStart="16dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/ConfirmPassword"
        android:paddingStart="16dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/colorButtonText"
        android:background="@color/colorButton"
        />
</LinearLayout>
