<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:minHeight="48dp"
        android:hint="@string/Password"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/colorButtonText"
        android:background="@color/colorButton"
        android:backgroundTint="@color/colorButton" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/Register1"
        android:textColor="@color/colorText"
        android:textSize="14sp" />

</LinearLayout>